# cheap-RAG

./: .gitignore  Dockerfile  Dockerfile-es  Dockerfile-rag  README.md  docker-compose.yaml  docker-compose.yml  download_model.sh  milvus-config.yaml  pyproject.toml  requirements.txt  roadmap.md
cheap_rag/: api.py
cheap_rag/configs/: config.py  config_cls.py
cheap_rag/modules/storage/: __init__.py  elastic_storage.py  milvus_storage.py  minio_storage.py
cheap_rag/modules/workflow/insert_workflow/general/: pipe.py
cheap_rag/modules/workflow/insert_workflow/mineru/: data_cls.py  pipe.py  workflow_config.py
cheap_rag/modules/workflow/workflow_general/insert_workflow/: data_cls.py  workflow_tasks.py
cheap_rag/modules/workflow/workflow_paper/: config.py  data_cls.py  db_opration.py  storage_design.py
cheap_rag/modules/workflow/workflow_paper/insert_workflow/: pipe.py  workflow_tasks.py
cheap_rag/modules/workflow/workflow_paper/query_workflow/: pipe.py  workflow_tasks.py
cheap_rag/modules/workflow_paper/: storage_design.py
cheap_rag/modules/workflow_paper/insert_workflow/general/: pipe.py  workflow_tasks.py
cheap_rag/modules/workflow_paper/insert_workflow/mineru/: data_cls.py  pipe.py
cheap_rag/routes/: insert.py  maintain.py  pub_storage.py  query.py  schema.py  tool.py  vecdatas_routes.py
cheap_rag/utils/: encrypt.py  helpers.py  logger.py  tool_calling.py
cheap_rag/utils/tool_calling/: api_calling.py  doc_processing.py  markdownnify.py
cheap_rag/utils/tool_calling/local_inferring/: embedding_utils.py  local_inference.py  onnx_inference.py  onnx_to_trt.py  retrieve_patterns.py  torch_inference.py
examples/: test_query.py  test_write.py
src/common/: __init__.py  api_predict_common.py  cost_time.py  datapreprocess.py  deal_response.py  encrypt.py  get_logger.py  https.py  utils.py
src/configs/: __init__.py  base_config.py  vector_database_config.py
src/configs/config_v2/: config_cls.py
src/dev/: test_api.py
src/module/parsers/: get_ocr_result.py  postprocess.py  predict.py  predict_v1.py
src/module/pipeline_v2/: task_manager.py  tool_calling.py
src/module/pipeline_v2/insert_workflow/: pipe.py
src/module/spliters/: parse_file.py  predict.py
src/module/vecdatas/: predict.py
src/predict/: __init__.py  base_engine.py  vecDataInference.py  vecDataInference_v1.py
src/views/: __init__.py  vecdatas_routes.py
tests/: test_tool_calling.py  test_write.py
