[tool.poetry]
name = "cheap-rag"
version = "0.1.0"
description = "A cheap but strong RAG framework."
authors = ["Louis Jin <lululouisjin@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
aiohttp = ">=3.9.3"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
numpy = ">=2.2.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
openpyxl = ">=3.1.5,<4.0.0"
xlrd = ">=2.0.1,<3.0.0"
pymilvus = ">=2.4.0"
tqdm = ">=4.67.1,<5.0.0"
minio = ">=7.2.15,<8.0.0"
pydantic = ">=2.10.6,<3.0.0"
elasticsearch = ">=8.15.1"
openai = ">=1.64.0,<2.0.0"
aiofiles = ">=24.1.0,<25.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
