[tool.poetry]
name = "cheap-rag"
version = "0.1.0"
description = "A cheap but strong RAG framework."
authors = ["Louis Jin <lululouisjin@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]

# Core
python = ">=3.11,<3.14"
aiohttp = ">=3.9.3"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
numpy = "^2.2.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
pymilvus = "^2.4.0"
tqdm = "^4.67.1"
minio = "^7.2.15"
pydantic = "^2.10.6"
elasticsearch = "^8.15.1"
openai = "^1.64.0"
aiofiles = "^24.1.0"
beautifulsoup4 = "^4.13.3"
pydantic-settings = "^2.8.0"

# Optional
onnxruntime = {version = "^1.20.1", optional = true}
torch = {version = "^2.1.0", optional = true}
onnx = {version = "^1.17.0", optional = true}
transformers = {version = "^4.46.0", optional = true}
onnxruntime-gpu = {version = "^1.20.1", optional = true}
huggingface-hub = "^0.32.5"


[tool.poetry.extras]
gpu = ["onnxruntime-gpu", "torch", "onnx", "transformers"]
cpu = ["onnxruntime", "transformers"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
